# Crosshair

./: .clang-format  .gitmodules  CMakeLists.txt  Crosshair.sln  Pointer.sln  README  README.md  config.lua
Crosshair/: Config.cs  Overlay.Designer.cs  Overlay.cs  Program.cs
Pointer/: Config.cs  Crosshair.csproj  Externs.cs  Overlay.Designer.cs  Overlay.cs  Pointer.csproj  Program.cs  config.json
Updater/: App.xaml.cs  GithubRes.cs  HttpClientExt.cs  HttpResponse.cs  MainWindow.xaml  MainWindow.xaml.cs  VersionFile.cs
include/: Config.h  ConfigException.h  ConfigException.hpp  MainWindow.h  ProcessConfig.h  eval.h  luaFunctions.h
src/: Config.cpp  Crosshair.cpp  MainWindow.cpp  ProcessConfig.cpp  eval.cpp  luaFunctions.c
